Implemented "class names for styles: gpii-<componentName>-<rest of class name>", round #1.

--- a/src/shared/adjusters/html/UIOptionsTemplate-contrastNew.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-contrastNew.html
@@ -1,21 +1,21 @@
 <input type="checkbox" id="preferenceSwitchContrast" class="gpiic-contrast-constrastInput"/>
-<div class="headerImage fl-adjuster-icons fl-adjuster-icons-sept-12">
+<div class="headerImage gpii-adjusterIcons gpii-adjusterIcons-sept-12">
     <label class="gpii-headerTitle gpiic-headerTitle"></label>
-    <div class="headerImageTick fl-adjuster-icons fl-adjuster-icons-sept-12"></div>
+    <div class="headerImageTick gpii-adjusterIcons gpii-adjusterIcons-sept-12"></div>
 </div>
 <label class="gpii-headerTitle gpiic-headerTitle headerClickableLabel" for="preferenceSwitchContrast"></label>
 
 <input type="checkbox" id="addToMyPreferencesContrast"/>
-<div class="fl-adjuster-icons fl-adjuster-icons-additional addToMyPreferencesStar">
+<div class="gpii-adjusterIcons gpii-adjusterIconsAdditional addToMyPreferencesStar">
 </div>
 <label class="gpii-addToMyPreferencesLabel gpiic-addToMyPreferencesLabel" for="addToMyPreferencesContrast" tooltip-checked="" tooltip-unchecked="" title=""></label>
 <br/>
-<div class="fl-uiOptions-category gpiic-category fl-uiOptions-text">
+<div class="gpii-category gpiic-category fl-uiOptions-text">
     <h2><label class="gpiic-contrast-contrastLabel"></label></h2>
 
-    <div class="fl-uiOptions-preview-per-setting-container">
-        <div class="fl-adjuster-icons fl-uiOptions-preview-per-setting-eye"></div>
-        <div class="fl-uiOptions-preview-per-setting-eye-background"></div>
-        <iframe class="fl-uiOptions-preview-per-setting-frame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
+    <div class="gpii-previewPerSettingContainer">
+        <div class="gpii-adjusterIcons gpii-previewPerSettingEye"></div>
+        <div class="gpii-previewPerSettingEyeBackground"></div>
+        <iframe class="gpii-previewPerSettingFrame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
     </div>
 </div>
