--- a/src/shared/adjusters/html/UIOptionsTemplate-cursorSize.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-cursorSize.html
@@ -1,17 +1,17 @@
 <div class="gpiic-increaseSize-cursor-size">
     <h2><!-- <span class="fl-icon-size"></span> --><label class="gpiic-increaseSize-cursor-size-label" for="cursor-size"></label></h2>
 
-    <div class="fl-adjuster-icons fl-uiOptions-preview-per-setting-container">
-        <div class="fl-adjuster-icons fl-uiOptions-preview-per-setting-eye"></div>
-        <div class="fl-uiOptions-preview-per-setting-eye-background"></div>
-        <iframe class="fl-uiOptions-preview-per-setting-frame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
+    <div class="gpii-adjusterIcons gpii-previewPerSettingContainer">
+        <div class="gpii-adjusterIcons gpii-previewPerSettingEye"></div>
+        <div class="gpii-previewPerSettingEyeBackground"></div>
+        <iframe class="gpii-previewPerSettingFrame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
     </div>
 
     <div>
         <div>
-            <div class="fl-adjuster-icons fl-icon-small-cursor" role="img"></div>
+            <div class="gpii-adjusterIcons gpii-increaseSize-iconSmallCursor" role="img"></div>
             <div class="flc-textfieldSlider-slider fl-force-left fl-slider fl-slider-horz"> </div>
-            <div class="fl-adjuster-icons fl-icon-big-cursor" role="img"></div>            
+            <div class="gpii-adjusterIcons gpii-increaseSize-iconBigCursor" role="img"></div>            
         </div>
         <div class="fl-slider-input" style="display:none;"><input id="cursor-size" class="flc-textfieldSlider-field" type="text" /></div>
     </div>
