--- a/src/shared/adjusters/html/UIOptionsTemplate-increaseSize.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-increaseSize.html
@@ -1,95 +1,95 @@
 <input type="checkbox" id="preferenceSwitchIncreaseSize" class="gpiic-increaseSize-preferenceSwitch"/>
-<div class="headerImage fl-adjuster-icons fl-adjuster-icons-sept-12">
+<div class="headerImage gpii-adjusterIcons gpii-adjusterIcons-sept-12">
     <label class="gpii-headerTitle gpiic-headerTitle"></label>
-    <div class="headerImageTick fl-adjuster-icons fl-adjuster-icons-sept-12"></div>
+    <div class="headerImageTick gpii-adjusterIcons gpii-adjusterIcons-sept-12"></div>
 </div>
 <label class="gpii-headerTitle gpiic-headerTitle headerClickableLabel" for="preferenceSwitchIncreaseSize"></label>
 
 <input type="checkbox" id="addToMyPreferencesIncreaseSize"/>
-<div class="fl-adjuster-icons fl-adjuster-icons-additional addToMyPreferencesStar">
+<div class="gpii-adjusterIcons gpii-adjusterIconsAdditional addToMyPreferencesStar">
 </div>
 <label class="gpii-addToMyPreferencesLabel gpiic-addToMyPreferencesLabel" for="addToMyPreferencesIncreaseSize" tooltip-checked="" tooltip-unchecked="" title=""></label>
 
 <div class="increaseSizePreferenceGroup">
 
-	<div class="flc-uiOptions-text-size fl-uiOptions-category gpiic-category fl-uiOptions-text">
+	<div class="flc-uiOptions-text-size gpii-category gpiic-category fl-uiOptions-text">
 		<div class="flc-uiOptions-plus-minus-numerical">
 		    <h2><label class="gpiic-increaseSize-plusMinusNumericalLabelTextSize"></label></h2>
 		    
-		    <div class="fl-uiOptions-preview-per-setting-container">
-		        <div class="fl-adjuster-icons fl-uiOptions-preview-per-setting-eye"></div>
-		        <div class="fl-uiOptions-preview-per-setting-eye-background"></div>
-		        <iframe class="fl-uiOptions-preview-per-setting-frame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
+		    <div class="gpii-previewPerSettingContainer">
+		        <div class="gpii-adjusterIcons gpii-previewPerSettingEye"></div>
+		        <div class="gpii-previewPerSettingEyeBackground"></div>
+		        <iframe class="gpii-previewPerSettingFrame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
 		    </div>
 		
-		    <div class="fl-uiOptions-plus-minus-numerical-widget">
-		        <label class="fl-uiOptions-plus-minus-numerical-minus gpiic-incresaeSize-plusMinusNumericalMinusTextSize"></label>
-		        <input type="text" class="fl-uiOptions-plus-minus-numerical-value gpiic-increaseSize-plusMinusNumericalValueTextSize fl-inputs"/>
-		        <label class="fl-uiOptions-plus-minus-numerical-plus gpiic-increaseSize-plusMinusNumericalPlusTextSize"></label>
+		    <div class="gpii-increaseSize-plusMinusNumericalWidget">
+		        <label class="gpii-increaseSize-plusMinusNumericalMinus gpiic-incresaeSize-plusMinusNumericalMinusTextSize"></label>
+		        <input type="text" class="gpii-increaseSize-plusMinusNumericalValue gpiic-increaseSize-plusMinusNumericalValueTextSize fl-inputs"/>
+		        <label class="gpii-increaseSize-plusMinusNumericalPlus gpiic-increaseSize-plusMinusNumericalPlusTextSize"></label>
 		    </div>
 		</div>
 	</div>
 
-	<div class="fl-uiOptions-category gpiic-category fl-uiOptions-text">
+	<div class="gpii-category gpiic-category fl-uiOptions-text">
 		<div class="gpiic-increaseSize-cursor-size">
 		    <h2><!-- <span class="fl-icon-size"></span> --><label class="gpiic-increaseSize-cursor-size-label" for="cursor-size"></label></h2>
 		
-		    <div class="fl-adjuster-icons fl-uiOptions-preview-per-setting-container">
-		        <div class="fl-adjuster-icons fl-uiOptions-preview-per-setting-eye"></div>
-		        <div class="fl-uiOptions-preview-per-setting-eye-background"></div>
-		        <iframe class="fl-uiOptions-preview-per-setting-frame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
+		    <div class="gpii-adjusterIcons gpii-previewPerSettingContainer">
+		        <div class="gpii-adjusterIcons gpii-previewPerSettingEye"></div>
+		        <div class="gpii-previewPerSettingEyeBackground"></div>
+		        <iframe class="gpii-previewPerSettingFrame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
 		    </div>
 		
 		    <div>
 		        <div>
-		            <div class="fl-adjuster-icons fl-icon-small-cursor" role="img"></div>
+		            <div class="gpii-adjusterIcons gpii-increaseSize-iconSmallCursor" role="img"></div>
 		            <div class="flc-textfieldSlider-slider fl-force-left fl-slider fl-slider-horz"> </div>
-		            <div class="fl-adjuster-icons fl-icon-big-cursor" role="img"></div>            
+		            <div class="gpii-adjusterIcons gpii-increaseSize-iconBigCursor" role="img"></div>            
 		        </div>
 		        <div class="fl-slider-input" style="display:none;"><input id="cursor-size" class="flc-textfieldSlider-field" type="text" /></div>
 		    </div>
 		</div>
 	</div>
 	
-	<div class="flc-uiOptions-magnifier fl-uiOptions-category gpiic-category fl-uiOptions-text">
+	<div class="flc-uiOptions-magnifier gpii-category gpiic-category fl-uiOptions-text">
 		<div class="flc-uiOptions-plus-minus-numerical">
 		    <h2><label class="gpiic-increaseSize-plusMinusNumericalLabelMagnifier"></label></h2>
 		    
-		    <div class="fl-uiOptions-preview-per-setting-container">
-		        <div class="fl-adjuster-icons fl-uiOptions-preview-per-setting-eye"></div>
-		        <div class="fl-uiOptions-preview-per-setting-eye-background"></div>
-		        <iframe class="fl-uiOptions-preview-per-setting-frame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
+		    <div class="gpii-previewPerSettingContainer">
+		        <div class="gpii-adjusterIcons gpii-previewPerSettingEye"></div>
+		        <div class="gpii-previewPerSettingEyeBackground"></div>
+		        <iframe class="gpii-previewPerSettingFrame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
 		    </div>
 		
-		    <div class="fl-uiOptions-plus-minus-numerical-widget">
-		        <label class="fl-uiOptions-plus-minus-numerical-minus gpiic-increaseSize-plusMinusNumericalMinusMagnifier"></label>
-		        <input type="text" class="fl-uiOptions-plus-minus-numerical-value gpiic-increaseSize-plusMinusNumericalValueMagnifier fl-inputs"/>
-		        <label class="fl-uiOptions-plus-minus-numerical-plus gpiic-increaseSize-plusMinusNumericalPlusMagnifier"></label>
+		    <div class="gpii-increaseSize-plusMinusNumericalWidget">
+		        <label class="gpii-increaseSize-plusMinusNumericalMinus gpiic-increaseSize-plusMinusNumericalMinusMagnifier"></label>
+		        <input type="text" class="gpii-increaseSize-plusMinusNumericalValue gpiic-increaseSize-plusMinusNumericalValueMagnifier fl-inputs"/>
+		        <label class="gpii-increaseSize-plusMinusNumericalPlus gpiic-increaseSize-plusMinusNumericalPlusMagnifier"></label>
 		    </div>
 		</div>
 	</div>
 
 	<input type="checkbox" id="preferenceSwitchIncreaseSizeExtra" class="gpiic-increaseSize-preferenceSwitchExtra"/>
-    <div class="fl-uiOptions-category-hidden gpiic-category-hidden fl-uiOptions-text">
-		<div class="fl-uiOptions-category gpiic-category fl-uiOptions-text">
+    <div class="gpii-category-hidden gpiic-category-hidden fl-uiOptions-text">
+		<div class="gpii-category gpiic-category fl-uiOptions-text">
 			<h2>
 			    <label class="gpiic-increaseSize-magnifierPositionHeading"></label>
 			</h2>
 			<div class="gpiic-increaseSize-magnifierPositionRow fl-choice">
 			    <input type="radio" class="gpiic-increaseSize-magnifierPositionInput" name="magnifierPosition" id="magnifierPosition" />
 			    <div class="fl-indicator"></div>
-			    <label for="magnifierPosition" class="fl-uiOptions-magnifierPosition-label gpiic-increaseSize-magnifierPositionLabel" tooltip="" title="">
+			    <label for="magnifierPosition" class="gpii-increaseSize-magnifierPositionLabel gpiic-increaseSize-magnifierPositionLabel" tooltip="" title="">
 			        <span class="fl-preview-A"></span>
 			        <span class="fl-hidden-accessible"></span>
 			        <div class="fl-crossout"></div>
 			    </label>
 			</div>
 		</div>
-		<div class="fl-uiOptions-category gpiic-category fl-uiOptions-text">
+		<div class="gpii-category gpiic-category fl-uiOptions-text">
 			<h2>
 			    <label class="gpiic-increaseSize-magnifierFollowsHeading"></label>
 			</h2>
-			<div class="fl-uiOptions-magnifierFollowsRow gpiic-increaseSize-magnifierFollowsRow fl-choice">
+			<div class="gpii-increaseSize-magnifierFollowsRow gpiic-increaseSize-magnifierFollowsRow fl-choice">
 			    <input type="checkbox" class="gpiic-increaseSize-magnifierFollowsInput" name="magnifierFollows" id="magnifierFollows" />
 			    <!-- <div class="fl-indicator"></div> -->
 			    <label for="magnifierFollows" class="gpiic-increaseSize-magnifierFollowsLabel gpii-prefsEditor-magnifierFollowsLabel">
@@ -101,5 +101,5 @@
 		</div>
     </div>
 
-    <label for="preferenceSwitchIncreaseSizeExtra" class="gpii-moreLess gpiic-moreLess fl-uiOptions-category gpiic-category">&nbsp;</label>
+    <label for="preferenceSwitchIncreaseSizeExtra" class="gpii-moreLess gpiic-moreLess gpii-category gpiic-category">&nbsp;</label>
 </div>
