--- a/src/shared/adjusters/html/UIOptionsTemplate-plusMinusNumerical.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-plusMinusNumerical.html
@@ -1,15 +1,15 @@
 <div class="flc-uiOptions-plus-minus-numerical">
     <h2><label class="gpiic-increaseSize-plusMinusNumericalLabelTextSize"></label></h2>
     
-    <div class="fl-uiOptions-preview-per-setting-container">
-        <div class="fl-adjuster-icons fl-uiOptions-preview-per-setting-eye"></div>
-        <div class="fl-uiOptions-preview-per-setting-eye-background"></div>
-        <iframe class="fl-uiOptions-preview-per-setting-frame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
+    <div class="gpii-previewPerSettingContainer">
+        <div class="gpii-adjusterIcons gpii-previewPerSettingEye"></div>
+        <div class="gpii-previewPerSettingEyeBackground"></div>
+        <iframe class="gpii-previewPerSettingFrame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
     </div>
 
-    <div class="fl-uiOptions-plus-minus-numerical-widget">
-        <label class="fl-uiOptions-plus-minus-numerical-minus gpiic-incresaeSize-plusMinusNumericalMinusTextSize"></label>
-        <input type="text" class="fl-uiOptions-plus-minus-numerical-value gpiic-increaseSize-plusMinusNumericalValueTextSize fl-inputs"/>
-        <label class="fl-uiOptions-plus-minus-numerical-plus gpiic-increaseSize-plusMinusNumericalPlusTextSize"></label>
+    <div class="gpii-increaseSize-plusMinusNumericalWidget">
+        <label class="gpii-increaseSize-plusMinusNumericalMinus gpiic-incresaeSize-plusMinusNumericalMinusTextSize"></label>
+        <input type="text" class="gpii-increaseSize-plusMinusNumericalValue gpiic-increaseSize-plusMinusNumericalValueTextSize fl-inputs"/>
+        <label class="gpii-increaseSize-plusMinusNumericalPlus gpiic-increaseSize-plusMinusNumericalPlusTextSize"></label>
     </div>
 </div>
