--- a/src/shared/preview/html/uiOptionsCursorPreview.html
+++ b/src/shared/preview/html/uiOptionsCursorPreview.html
@@ -5,12 +5,12 @@
     <link rel="stylesheet" type="text/css" href="../../adjusters/css/style.css" />
     <link rel="stylesheet" type="text/css" href="../../lib/infusion/components/uiOptions/css/fss/fss-theme-yb-uio.css" />
 </head>
-<body class="fl-uiOptions-preview-per-setting-body">
-    <div class="fl-uiOptions-preview-per-setting-div">
-      <div class="fl-uiOptions-preview-per-setting-div-inner gpiic-increaseSize-previewPerSettingCursorDiv">
-            <div class="fl-adjuster-icons fl-adjuster-icons-sept-12 fl-uiOptions-preview-per-setting-cursor1"></div>
-            <div class="fl-adjuster-icons fl-adjuster-icons-sept-12 fl-uiOptions-preview-per-setting-cursor2"></div>
-            <div class="fl-adjuster-icons fl-adjuster-icons-sept-12 fl-uiOptions-preview-per-setting-cursor3"></div>
+<body class="gpii-previewPerSettingBody">
+    <div class="gpii-previewPerSettingDiv">
+      <div class="gpii-previewPerSettingDivInner gpiic-increaseSize-previewPerSettingCursorDiv">
+            <div class="gpii-adjusterIcons gpii-adjusterIcons-sept-12 gpii-previewPerSettingCursor1"></div>
+            <div class="gpii-adjusterIcons gpii-adjusterIcons-sept-12 gpii-previewPerSettingCursor2"></div>
+            <div class="gpii-adjusterIcons gpii-adjusterIcons-sept-12 gpii-previewPerSettingCursor3"></div>
       </div>
     </div>
 </body>
