Implemented "class names for styles: gpii-<componentName>-<rest of class name>", round #2.

--- a/src/shared/adjusters/html/UIOptionsTemplate-contrastNew.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-contrastNew.html
@@ -1,12 +1,12 @@
 <input type="checkbox" id="preferenceSwitchContrast" class="gpiic-contrast-constrastInput"/>
-<div class="headerImage gpii-adjusterIcons gpii-adjusterIcons-sept-12">
+<div class="gpii-headerImage gpii-adjusterIcons gpii-adjusterIcons-sept-12">
     <label class="gpii-headerTitle gpiic-headerTitle"></label>
-    <div class="headerImageTick gpii-adjusterIcons gpii-adjusterIcons-sept-12"></div>
+    <div class="gpii-headerImageTick gpii-adjusterIcons gpii-adjusterIcons-sept-12"></div>
 </div>
-<label class="gpii-headerTitle gpiic-headerTitle headerClickableLabel" for="preferenceSwitchContrast"></label>
+<label class="gpii-headerTitle gpiic-headerTitle gpii-headerClickableLabel" for="preferenceSwitchContrast"></label>
 
 <input type="checkbox" id="addToMyPreferencesContrast"/>
-<div class="gpii-adjusterIcons gpii-adjusterIconsAdditional addToMyPreferencesStar">
+<div class="gpii-adjusterIcons gpii-adjusterIconsAdditional gpii-addToMyPreferencesStar">
 </div>
 <label class="gpii-addToMyPreferencesLabel gpiic-addToMyPreferencesLabel" for="addToMyPreferencesContrast" tooltip-checked="" tooltip-unchecked="" title=""></label>
 <br/>
