--- a/src/shared/adjusters/html/UIOptionsTemplate-increaseSize.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-increaseSize.html
@@ -1,16 +1,16 @@
 <input type="checkbox" id="preferenceSwitchIncreaseSize" class="gpiic-increaseSize-preferenceSwitch"/>
-<div class="headerImage gpii-adjusterIcons gpii-adjusterIcons-sept-12">
+<div class="gpii-headerImage gpii-adjusterIcons gpii-adjusterIcons-sept-12">
     <label class="gpii-headerTitle gpiic-headerTitle"></label>
-    <div class="headerImageTick gpii-adjusterIcons gpii-adjusterIcons-sept-12"></div>
+    <div class="gpii-headerImageTick gpii-adjusterIcons gpii-adjusterIcons-sept-12"></div>
 </div>
-<label class="gpii-headerTitle gpiic-headerTitle headerClickableLabel" for="preferenceSwitchIncreaseSize"></label>
+<label class="gpii-headerTitle gpiic-headerTitle gpii-headerClickableLabel" for="preferenceSwitchIncreaseSize"></label>
 
 <input type="checkbox" id="addToMyPreferencesIncreaseSize"/>
-<div class="gpii-adjusterIcons gpii-adjusterIconsAdditional addToMyPreferencesStar">
+<div class="gpii-adjusterIcons gpii-adjusterIconsAdditional gpii-addToMyPreferencesStar">
 </div>
 <label class="gpii-addToMyPreferencesLabel gpiic-addToMyPreferencesLabel" for="addToMyPreferencesIncreaseSize" tooltip-checked="" tooltip-unchecked="" title=""></label>
 
-<div class="increaseSizePreferenceGroup">
+<div class="gpii-increaseSizePreferenceGroup">
 
 	<div class="flc-uiOptions-text-size gpii-category gpiic-category fl-uiOptions-text">
 		<div class="flc-uiOptions-plus-minus-numerical">
@@ -92,7 +92,7 @@
 			<div class="gpii-increaseSize-magnifierFollowsRow gpiic-increaseSize-magnifierFollowsRow fl-choice">
 			    <input type="checkbox" class="gpiic-increaseSize-magnifierFollowsInput" name="magnifierFollows" id="magnifierFollows" />
 			    <!-- <div class="fl-indicator"></div> -->
-			    <label for="magnifierFollows" class="gpiic-increaseSize-magnifierFollowsLabel gpii-prefsEditor-magnifierFollowsLabel">
+			    <label for="magnifierFollows" class="gpiic-increaseSize-magnifierFollowsLabel gpii-increaseSize-magnifierFollowsLabel">
 			        <span class="fl-preview-A"></span>
 			        <span class="fl-hidden-accessible"></span>
 			        <div class="fl-crossout"></div>
