Implemented "class names for styles: gpii-<componentName>-<rest of class name>", round #3.

--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -1,5 +1,5 @@
 <form id="options" action="" class="fl-uiOptions fl-focus">
-    <div class="fl-container-flex60 fl-force-left preference flc-uiOptions-contrastPanel">
+    <div class="fl-container-flex60 fl-force-left gpii-preferenceGroup flc-uiOptions-contrastPanel">
 
         <div class="contrastPreferenceGroup">
             <div class="gpii-prefsEditor-contrast fl-uiOptions-text"></div>
@@ -7,7 +7,7 @@
 
     </div>
     
-    <div class="fl-container-flex60 fl-force-left preference">
+    <div class="fl-container-flex60 fl-force-left gpii-preferenceGroup">
     
     	<div class="gpii-prefsEditor-increaseSizePanel">
     	</div>
