--- a/src/shared/adjusters/html/UIOptionsTemplate-increaseSize.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-increaseSize.html
@@ -43,7 +43,7 @@
 		    <div>
 		        <div>
 		            <div class="gpii-adjusterIcons gpii-increaseSize-iconSmallCursor" role="img"></div>
-		            <div class="flc-textfieldSlider-slider fl-force-left fl-slider fl-slider-horz"> </div>
+		            <div class="flc-textfieldSlider-slider fl-force-left fl-slider gpii-slider-horz"> </div>
 		            <div class="gpii-adjusterIcons gpii-increaseSize-iconBigCursor" role="img"></div>            
 		        </div>
 		        <div class="fl-slider-input" style="display:none;"><input id="cursor-size" class="flc-textfieldSlider-field" type="text" /></div>
