--- a/src/shared/adjusters/html/UIOptionsTemplate-magnifier.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-magnifier.html
@@ -2,7 +2,7 @@
     <h2><!-- <span class="fl-icon-size"></span> --><label class="flc-uiOptions-magnifier-label" for="magnifier"></label></h2>
     <div class="fl-inputs">
         <div class="fl-force-left">
-            <div class="flc-textfieldSlider-slider fl-force-left fl-slider fl-slider-horz"> </div>
+            <div class="flc-textfieldSlider-slider fl-force-left fl-slider gpii-slider-horz"> </div>
         </div>
         <div class="fl-slider-input" style=""><input id="magnifier" class="flc-textfieldSlider-field" type="text" /></div>
         <br/>
