Implemented "class names for styles: gpii-<componentName>-<rest of class name>", round #5.

--- a/src/shared/adjusters/html/UIOptionsTemplate-cursorSize.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-cursorSize.html
@@ -10,9 +10,9 @@
     <div>
         <div>
             <div class="gpii-adjusterIcons gpii-increaseSize-iconSmallCursor" role="img"></div>
-            <div class="flc-textfieldSlider-slider fl-force-left fl-slider gpii-slider-horz"> </div>
+            <div class="flc-textfieldSlider-slider fl-force-left fl-slider gpii-slider gpii-slider-horz"> </div>
             <div class="gpii-adjusterIcons gpii-increaseSize-iconBigCursor" role="img"></div>            
         </div>
-        <div class="fl-slider-input" style="display:none;"><input id="cursor-size" class="flc-textfieldSlider-field" type="text" /></div>
+        <div class="fl-slider-input gpii-slider-input" style="display:none;"><input id="cursor-size" class="flc-textfieldSlider-field" type="text" /></div>
     </div>
 </div>
