Implemented "class names for styles: gpii-<componentName>-<rest of class name>", round #6.

--- a/src/shared/adjusters/html/UIOptionsTemplate-increaseSize.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-increaseSize.html
@@ -75,9 +75,9 @@
 			<h2>
 			    <label class="gpiic-increaseSize-magnifierPositionHeading"></label>
 			</h2>
-			<div class="gpiic-increaseSize-magnifierPositionRow fl-choice">
+			<div class="gpiic-increaseSize-magnifierPositionRow fl-choice gpii-choice">
 			    <input type="radio" class="gpiic-increaseSize-magnifierPositionInput" name="magnifierPosition" id="magnifierPosition" />
-			    <div class="fl-indicator"></div>
+			    <div class="fl-indicator gpii-indicator"></div>
 			    <label for="magnifierPosition" class="gpii-increaseSize-magnifierPositionLabel gpiic-increaseSize-magnifierPositionLabel" tooltip="" title="">
 			        <span class="fl-preview-A"></span>
 			        <span class="fl-hidden-accessible"></span>
@@ -89,9 +89,8 @@
 			<h2>
 			    <label class="gpiic-increaseSize-magnifierFollowsHeading"></label>
 			</h2>
-			<div class="gpii-increaseSize-magnifierFollowsRow gpiic-increaseSize-magnifierFollowsRow fl-choice">
+			<div class="gpii-increaseSize-magnifierFollowsRow gpiic-increaseSize-magnifierFollowsRow fl-choice gpii-choice">
 			    <input type="checkbox" class="gpiic-increaseSize-magnifierFollowsInput" name="magnifierFollows" id="magnifierFollows" />
-			    <!-- <div class="fl-indicator"></div> -->
 			    <label for="magnifierFollows" class="gpiic-increaseSize-magnifierFollowsLabel gpii-increaseSize-magnifierFollowsLabel">
 			        <span class="fl-preview-A"></span>
 			        <span class="fl-hidden-accessible"></span>
