--- a/src/shared/adjusters/html/UIOptionsTemplate-magnifierPosition.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-magnifierPosition.html
@@ -1,9 +1,9 @@
 <h2>
     <label class="gpiic-increaseSize-magnifierPositionHeading"></label>
 </h2>
-<div class="gpiic-increaseSize-magnifierPositionRow fl-choice">
+<div class="gpiic-increaseSize-magnifierPositionRow fl-choice gpii-choice">
     <input type="radio" class="gpiic-increaseSize-magnifierPositionInput" name="magnifierPosition" id="magnifierPosition" />
-    <div class="fl-indicator"></div>
+    <div class="fl-indicator gpii-indicator"></div>
     <label for="magnifierPosition" class="gpii-increaseSize-magnifierPositionLabel gpiic-increaseSize-magnifierPositionLabel" tooltip="" title="">
         <span class="fl-preview-A"></span>
         <span class="fl-hidden-accessible"></span>
