Implemented "class names for styles: gpii-<componentName>-<rest of class name>", round #8.

--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -1,8 +1,8 @@
-<form id="options" action="" class="fl-uiOptions fl-focus">
+<form id="options" action="" class="fl-uiOptions gpii-prefsEditor fl-focus">
     <div class="fl-container-flex60 fl-force-left gpii-preferenceGroup flc-uiOptions-contrastPanel">
 
         <div class="contrastPreferenceGroup">
-            <div class="gpii-prefsEditor-contrast fl-uiOptions-text"></div>
+            <div class="gpii-prefsEditor-contrast"></div>
         </div>
 
     </div>
