Implemented "class names for styles: gpii-<componentName>-<rest of class name>", round #10.

--- a/src/shared/adjusters/html/UIOptionsTemplate-contrastNew.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-contrastNew.html
@@ -1,21 +1,21 @@
 <input type="checkbox" id="preferenceSwitchContrast" class="gpiic-contrast-constrastInput"/>
-<div class="gpii-headerImage gpii-adjusterIcons gpii-adjusterIcons-sept-12">
-    <label class="gpii-headerTitle gpiic-headerTitle"></label>
-    <div class="gpii-headerImageTick gpii-adjusterIcons gpii-adjusterIcons-sept-12"></div>
+<div class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12">
+    <label class="gpii-prefsEditor-headerTitle gpiic-headerTitle"></label>
+    <div class="gpii-prefsEditor-headerImageTick gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12"></div>
 </div>
-<label class="gpii-headerTitle gpiic-headerTitle gpii-headerClickableLabel" for="preferenceSwitchContrast"></label>
+<label class="gpii-prefsEditor-headerTitle gpiic-headerTitle gpii-prefsEditor-headerClickableLabel" for="preferenceSwitchContrast"></label>
 
 <input type="checkbox" id="addToMyPreferencesContrast"/>
-<div class="gpii-adjusterIcons gpii-adjusterIconsAdditional gpii-addToMyPreferencesStar">
+<div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIconsAdditional gpii-prefsEditor-addToMyPreferencesStar">
 </div>
-<label class="gpii-addToMyPreferencesLabel gpiic-addToMyPreferencesLabel" for="addToMyPreferencesContrast" tooltip-checked="" tooltip-unchecked="" title=""></label>
+<label class="gpii-prefsEditor-addToMyPreferencesLabel gpiic-addToMyPreferencesLabel" for="addToMyPreferencesContrast" tooltip-checked="" tooltip-unchecked="" title=""></label>
 <br/>
-<div class="gpii-category gpiic-category fl-uiOptions-text">
+<div class="gpii-prefsEditor-category gpiic-category fl-uiOptions-text">
     <h2><label class="gpiic-contrast-contrastLabel"></label></h2>
 
-    <div class="gpii-previewPerSettingContainer">
-        <div class="gpii-adjusterIcons gpii-previewPerSettingEye"></div>
-        <div class="gpii-previewPerSettingEyeBackground"></div>
-        <iframe class="gpii-previewPerSettingFrame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
+    <div class="gpii-prefsEditor-previewPerSettingContainer">
+        <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
+        <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
+        <iframe class="gpii-prefsEditor-previewPerSettingFrame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
     </div>
 </div>
