--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -1,5 +1,5 @@
 <form id="options" action="" class="fl-uiOptions gpii-prefsEditor fl-focus">
-    <div class="fl-container-flex60 fl-force-left gpii-preferenceGroup flc-uiOptions-contrastPanel">
+    <div class="fl-container-flex60 fl-force-left gpii-prefsEditor-preferenceGroup flc-uiOptions-contrastPanel">
 
         <div class="contrastPreferenceGroup">
             <div class="gpii-prefsEditor-contrast"></div>
@@ -7,7 +7,7 @@
 
     </div>
     
-    <div class="fl-container-flex60 fl-force-left gpii-preferenceGroup">
+    <div class="fl-container-flex60 fl-force-left gpii-prefsEditor-preferenceGroup">
     
     	<div class="gpii-prefsEditor-increaseSizePanel">
     	</div>
