--- a/src/shared/adjusters/html/UIOptionsTemplate-cursorSize.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-cursorSize.html
@@ -1,18 +1,18 @@
 <div class="gpiic-increaseSize-cursor-size">
     <h2><!-- <span class="fl-icon-size"></span> --><label class="gpiic-increaseSize-cursor-size-label" for="cursor-size"></label></h2>
 
-    <div class="gpii-adjusterIcons gpii-previewPerSettingContainer">
-        <div class="gpii-adjusterIcons gpii-previewPerSettingEye"></div>
-        <div class="gpii-previewPerSettingEyeBackground"></div>
-        <iframe class="gpii-previewPerSettingFrame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
+    <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingContainer">
+        <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
+        <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
+        <iframe class="gpii-prefsEditor-previewPerSettingFrame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
     </div>
 
     <div>
         <div>
-            <div class="gpii-adjusterIcons gpii-increaseSize-iconSmallCursor" role="img"></div>
-            <div class="flc-textfieldSlider-slider fl-force-left fl-slider gpii-slider gpii-slider-horz"> </div>
-            <div class="gpii-adjusterIcons gpii-increaseSize-iconBigCursor" role="img"></div>            
+            <div class="gpii-prefsEditor-adjusterIcons xrhstos1-iconSmallCursor" role="img"></div>
+            <div class="flc-textfieldSlider-slider fl-force-left fl-slider gpii-prefsEditor-slider gpii-prefsEditor-slider-horz"> </div>
+            <div class="gpii-prefsEditor-adjusterIcons xrhstos1-iconBigCursor" role="img"></div>            
         </div>
-        <div class="fl-slider-input gpii-slider-input" style="display:none;"><input id="cursor-size" class="flc-textfieldSlider-field" type="text" /></div>
+        <div class="fl-slider-input gpii-prefsEditor-slider-input" style="display:none;"><input id="cursor-size" class="flc-textfieldSlider-field" type="text" /></div>
     </div>
 </div>
