--- a/src/shared/preview/html/uiOptionsCursorPreview.html
+++ b/src/shared/preview/html/uiOptionsCursorPreview.html
@@ -5,12 +5,12 @@
     <link rel="stylesheet" type="text/css" href="../../adjusters/css/style.css" />
     <link rel="stylesheet" type="text/css" href="../../lib/infusion/components/uiOptions/css/fss/fss-theme-yb-uio.css" />
 </head>
-<body class="gpii-previewPerSettingBody">
-    <div class="gpii-previewPerSettingDiv">
-      <div class="gpii-previewPerSettingDivInner gpiic-increaseSize-previewPerSettingCursorDiv">
-            <div class="gpii-adjusterIcons gpii-adjusterIcons-sept-12 gpii-previewPerSettingCursor1"></div>
-            <div class="gpii-adjusterIcons gpii-adjusterIcons-sept-12 gpii-previewPerSettingCursor2"></div>
-            <div class="gpii-adjusterIcons gpii-adjusterIcons-sept-12 gpii-previewPerSettingCursor3"></div>
+<body class="gpii-prefsEditor-previewPerSettingBody">
+    <div class="gpii-prefsEditor-previewPerSettingDiv">
+      <div class="gpii-prefsEditor-previewPerSettingDivInner gpiic-increaseSize-previewPerSettingCursorDiv">
+            <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12 gpii-prefsEditor-previewPerSettingCursor1"></div>
+            <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12 gpii-prefsEditor-previewPerSettingCursor2"></div>
+            <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12 gpii-prefsEditor-previewPerSettingCursor3"></div>
       </div>
     </div>
 </body>
