--- a/demos/explorationTool/index.html
+++ b/demos/explorationTool/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-base-global.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-layout.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-text.css" />
-    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-bw-uio.css" />
-    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-wb-uio.css" />
-    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-lgdg-uio.css" />
-    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-dglg-uio.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-bw-prefsEditor.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-wb-prefsEditor.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-lgdg-prefsEditor.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-dglg-prefsEditor.css" />
 
     <link rel="stylesheet" type="text/css" href="../../src/explorationTool/css/ExplorationTool.css" />
     <link rel="stylesheet" type="text/css" href="demo.css" />
@@ -69,7 +69,7 @@
             </div>
 
             <!-- This is the div that will contain the UI Options component -->
-            <div class="flc-slidingPanel-panel flc-uiOptions-iframe" role="region" id="dtpanel" aria-expanded=""></div>
+            <div class="flc-slidingPanel-panel flc-prefsEditor-iframe" role="region" id="dtpanel" aria-expanded=""></div>
 
         </div>
         <!-- END markup for explorationTool -->
@@ -91,7 +91,7 @@
             </header>
 
             <div id="main">
-                <div id="article-filters" class="flc-uiOptions-simplify-hide fl-clearfix">
+                <div id="article-filters" class="flc-explorationTool-simplify-hide fl-clearfix">
                     <div id="article-filter">
                         <span class="fl-font-size-130">Read</span><br>
                         Basic
@@ -106,7 +106,7 @@
                     </div>
                 </div>
 
-                <div id="helpful" class="flc-uiOptions-simplify-hide fl-clearfix">
+                <div id="helpful" class="flc-explorationTool-simplify-hide fl-clearfix">
                     <h1>Electrons</h1>
 
                     <div>
@@ -115,7 +115,7 @@
                         <span class="fl-icon-thumbsDown" aria-label="No, thumbs down" role="img"></span>
                     </div>
                 </div>
-                <div class="flc-uiOptions-simplify-hide resource-tools">
+                <div class="flc-explorationTool-simplify-hide resource-tools">
                     <menu type="toolbar" class="tools">
                         <li><a href="#">Make a Copy</a></li>
                         <li><a href="#">Details</a></li>
