--- a/src/explorationTool/html/SeparatedPanelFrame.html
+++ b/src/explorationTool/html/SeparatedPanelFrame.html
@@ -16,7 +16,6 @@
 
         <!-- Component styles -->
         <link rel="stylesheet" type="text/css" href="../../shared/lib/infusion/framework/preferences/css/PrefsEditor.css" />
-        <!-- link rel="stylesheet" type="text/css" href="../../shared/lib/infusion/framework/preferences/css/FatPanelUIOptionsFrame.css" / -->
         <link rel="stylesheet" type="text/css" href="../css/ExplorationTool.css" />
 
         <!--[if IE 8]>
@@ -28,7 +27,7 @@
         <script type="text/javascript" src="../../shared/lib/infusion/MyInfusion.js"></script>
      </head>
 
-    <body class="fl-uiOptions-explorationTool fl-focus fl-inverted-color">
+    <body class="fl-explorationTool fl-focus fl-inverted-color">
         <span class="fl-hidden">
             <div class="flc-toc-tocContainer"></div>
         </span>
