--- a/src/shared/adjusters/html/UIOptionsTemplate-magnifierInvertColours.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-magnifierInvertColours.html
@@ -1,11 +1,11 @@
-<h2><label class="gpiic-uiOptions-magnifierInvertColours-label"></label></h2>
+<h2><label class="gpiic-increaseSize-magnifierInvertColours-label"></label></h2>
 <input type="checkbox" id="preferenceSwitchMagnifierInvertColours"/>
-<label for="preferenceSwitchMagnifierInvertColours" class="gpii-uiOptions-magnifierInvertColours-area">
-	<div class="gpii-magnifierInvertColours-icon gpii-adjuster-icons gpii-adjuster-icons-sept-12"></div>
-	<div class="gpii-uio-icon-check-container">
-		<label class="gpiic-uiOptions-magnifierInvertColours-description gpii-uiOptions-magnifierInvertColours-description gpii-table-cell-valign-label"></label>
+<label for="preferenceSwitchMagnifierInvertColours" class="gpii-increaseSize-magnifierInvertColours-area">
+	<div class="gpii-increaseSize-magnifierInvertColoursIcon gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12"></div>
+	<div class="gpii-iconCheckContainer">
+		<label class="gpiic-increaseSize-magnifierInvertColours-description gpii-increasesize-magnifierInvertColoursDescription gpii-table-cell-valign-label"></label>
 		<label class="gpii-table-cell-valign-label">
-			<div class="gpii-adjuster-icons gpii-adjuster-icons-sept-12 gpii-uio-icon-check"></div>
+			<div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12 gpii-increaseSize-iconCheck"></div>
 		</label>
 	</div>
 </label>
