--- a/src/shared/adjusters/html/adjustersPilots2.html
+++ b/src/shared/adjusters/html/adjustersPilots2.html
@@ -4,9 +4,9 @@
     </div>
     <div class="fl-container-flex35 fl-force-right">
         <div class="fl-prefsEditor-buttons">
-            <input class="gpiic-prefsEditor-save fl-prefsEditor-save" type="button" value="" />
-            <input class="gpiic-prefsEditor-reset" type="button" value="" />
-            <input class="gpiic-prefsEditor-cancel fl-prefsEditor-cancel" type="button" value="" />
+            <input class="flc-prefsEditor-save fl-prefsEditor-save" type="button" value="" />
+            <input class="flc-prefsEditor-reset" type="button" value="" />
+            <input class="flc-prefsEditor-cancel fl-prefsEditor-cancel" type="button" value="" />
         </div>
     </div>
 </form>
