GPII-271: better names given, animation pretty almost done

--- a/src/pcp/newestSpeakText.html
+++ b/src/pcp/newestSpeakText.html
@@ -1,7 +1,16 @@
 <form id="options" action="" class="fl-uiOptions fl-uiOptions-fullNoPreview fl-col-fixed-72em fl-focus">
     <div class="flc-uiOptions-controls">
         <div class="fl-uiOptions-category">
-            <div class="speakText-collectiveContainer"></div>
+
+            <input type="checkbox" id="presetButton" class="gpii-speakTextPresetButton"/>
+            <label for="presetButton" class="gpii-speakTextPresetButton-label preset-button-label"></label>
+            <label for="presetButton" class="white-baloon-icon"></label>
+            <label for="presetButton" class="white-tick-icon"></label><br>
+            <div class="spacing-ensurer"></div>
+
+            <div class="speakText"></div>
+            <div class="words-spoken-per-minute"></div>
+            <div class="volume"></div>
         </div>
     </div>
 </form>
