--- a/src/shared/adjusters/html/UIOptionsTemplate-magnifierInvertColours.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-magnifierInvertColours.html
@@ -1,10 +1,10 @@
-<input type="checkbox" id="preferenceSwitchMagnifierInvertColours"/>
-<label for="preferenceSwitchMagnifierInvertColours" class="gpii-increaseSize-magnifierInvertColours-area">
-	<div class="gpii-increaseSize-magnifierInvertColoursIcon gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12"></div>
-	<div class="gpii-iconCheckContainer">
-		<label class="gpiic-increaseSize-magnifierInvertColours-description gpii-increasesize-magnifierInvertColoursDescription gpii-table-cell-valign-label"></label>
+<input type="checkbox" id="preferenceSwitchIconCheckAdjuster"/>
+<label for="preferenceSwitchIconCheckAdjuster" class="gpii-iconCheckAdjusterArea">
+	<div class="gpiic-iconCheckAdjusterIcon gpii-iconCheckAdjusterIcon gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12"></div>
+	<div class="gpii-iconCheckAdjusterContainer">
+		<label class="gpiic-iconCheckAdjusterDescription gpii-iconCheckAdjusterDescription gpii-table-cell-valign-label"></label>
 		<label class="gpii-table-cell-valign-label">
-			<div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12 gpii-increaseSize-iconCheck"></div>
+			<div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12 gpii-iconCheckAdjusterCheckIcon"></div>
 		</label>
 	</div>
 </label>
