GPII-271: Braille added.

--- a/src/pcp/newestSpeakText.html
+++ b/src/pcp/newestSpeakText.html
@@ -1,6 +1,6 @@
-<form id="options" action="" class="fl-uiOptions fl-uiOptions-fullNoPreview fl-col-fixed-72em fl-focus">
+<form id="options" action="" class="fl-prefsEditor fl-prefsEditor-fullNoPreview fl-col-fixed-72em fl-focus">
     <div class="flc-uiOptions-controls">
-        <div class="fl-uiOptions-category">
+        <div class="fl-prefsEditor-category">
 
             <input type="checkbox" id="presetButton" class="gpii-speakTextPresetButton"/>
             <label for="presetButton" class="gpii-speakTextPresetButton-label preset-button-label"></label>
@@ -11,12 +11,13 @@
             <div class="speakText"></div>
             <div class="words-spoken-per-minute"></div>
             <div class="volume"></div>
+            <div class="braille"></div>
         </div>
     </div>
 </form>
 
-<div class="fl-text-align-center fl-uiOptions-buttons">
-    <input class="flc-uiOptions-save fl-uiOptions-save" type="button" />
-    <input class="flc-uiOptions-reset" type="button" />
-    <input class="flc-uiOptions-cancel fl-uiOptions-cancel" type="button" />
+<div class="fl-text-align-center fl-prefsEditor-buttons">
+    <input class="flc-prefsEditor-save" type="button" />
+    <input class="flc-prefsEditor-reset" type="button" />
+    <input class="flc-prefsEditor-cancel" type="button" />
 </div>
