--- a/src/shared/adjusters/pcp/html/speakText.html
+++ b/src/shared/adjusters/pcp/html/speakText.html
@@ -1,10 +1,10 @@
 <div class="gpii-speakText-adjusters gpii-speakText-partially-expanded gpii-speakText-screenReaderTTSEnabled-element">
     <h3><label for="screenReaderTTSEnabled" class="gpiic-speakText-screenReaderTTSEnabled-label gpii-speakText-switch"></label></h3>
-    <div id="gpii-speakText-screenReaderOnOff" class="fl-uiOptions-onoff">
+    <div id="gpii-speakText-screenReaderOnOff" class="fl-prefsEditor-onoff">
         <input type="checkbox" id="screenReaderTTSEnabled" class="gpiic-speakText-screenReaderTTSEnabled"/>
         <label for="screenReaderTTSEnabled">
-            <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF" tabindex="0">
-                <span class="fl-uiOptions-switch-inner"></span>
+            <span class="fl-prefsEditor-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF" tabindex="0">
+                <span class="fl-prefsEditor-switch-inner"></span>
             </span>
         </label>
     </div><br><br><br>
