Created the showCrossHairs adjuster.

--- a/demos/adjustersPilots2/index.html
+++ b/demos/adjustersPilots2/index.html
@@ -31,6 +31,7 @@
 
     <!-- The custom adjusters JS files -->
     <script type="text/javascript" src="../../src/shared/adjusters/js/MagnifierInvertColoursAdjuster.js"></script>
+    <script type="text/javascript" src="../../src/shared/adjusters/js/ShowCrosshairsAdjuster.js"></script>
 
     <!-- The JS files of the enactors of my custom adjusters -->
     <!-- <script type="text/javascript" src="../../src/shared/enactors/js/ContrastEnactor.js"></script> -->
