--- a/src/shared/adjusters/html/adjustersPilots2.html
+++ b/src/shared/adjusters/html/adjustersPilots2.html
@@ -1,6 +1,7 @@
 <form id="options" action="" class="fl-prefsEditor gpii-prefsEditor fl-focus">
     <div class="fl-container-flex60 fl-force-left gpii-prefsEditor-preferenceGroup">
 		<div class="gpiic-increaseSize-magnifierInvertColours"></div>
+		<div class="gpiic-increaseSize-showCrosshairs"></div>
     </div>
     <div class="fl-container-flex35 fl-force-right">
         <div class="fl-prefsEditor-buttons">
