Added the "icomoon" font icons. Using the "icomoon" font icons in all iconCheckAdjusters.

--- a/src/shared/adjusters/html/UIOptionsTemplate-iconCheckAdjuster.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-iconCheckAdjuster.html
@@ -1,6 +1,6 @@
 <input type="checkbox" id="preferenceSwitchIconCheckAdjuster"/>
 <label for="preferenceSwitchIconCheckAdjuster" class="gpii-iconCheckAdjusterArea">
-	<div class="gpiic-iconCheckAdjusterIcon gpii-iconCheckAdjusterIcon gpii-prefsEditor-adjusterIcons gpii-prefsEditor-adjusterIcons-sept-12"></div>
+	<div class="gpiic-iconCheckAdjusterIcon gpii-iconCheckAdjusterIcon gpii-prefsEditor-adjusterIcons"></div>
 	<div class="gpii-iconCheckAdjusterContainer">
 		<label class="gpiic-iconCheckAdjusterDescription gpii-iconCheckAdjusterDescription gpii-table-cell-valign-label"></label>
 		<label class="gpii-table-cell-valign-label">
