Some minor tweaks from latest adjuster mockups (http://wiki.fluidproject.org/download/attachments/34570511/pilot%202%20adjusters.pdf?version=2&modificationDate=1382057203933&api=v2).

--- a/src/shared/adjusters/html/UIOptionsTemplate-increaseSize.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-increaseSize.html
@@ -19,7 +19,7 @@
 		    <div class="gpii-prefsEditor-previewPerSettingContainer">
 		        <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
 		        <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
-		        <iframe class="gpii-prefsEditor-previewPerSettingFrame gpiic-increaseSize-previewPerSettingFrameTextSize" src="" frameborder="0"></iframe>
+		        <iframe class="gpii-prefsEditor-previewPerSettingFrame gpii-prefsEditor-previewPerSettingFrame-medium gpiic-increaseSize-previewPerSettingFrameTextSize" src="" frameborder="0"></iframe>
 		    </div>
 		
 		    <div class="gpii-increaseSize-plusMinusNumericalWidget">
@@ -37,7 +37,7 @@
 		    <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingContainer">
 		        <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
 		        <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
-		        <iframe class="gpii-prefsEditor-previewPerSettingFrame gpiic-increaseSize-previewPerSettingFrameCursorSize" src="" frameborder="0"></iframe>
+		        <iframe class="gpii-prefsEditor-previewPerSettingFrame gpii-prefsEditor-previewPerSettingFrame-small gpiic-increaseSize-previewPerSettingFrameCursorSize" src="" frameborder="0"></iframe>
 		    </div>
 		
 		    <div>
@@ -58,7 +58,7 @@
 		    <div class="gpii-prefsEditor-previewPerSettingContainer">
 		        <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
 		        <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
-		        <iframe class="gpii-prefsEditor-previewPerSettingFrame gpiic-increaseSize-previewPerSettingFrameMagnifier" src="" frameborder="0"></iframe>
+		        <iframe class="gpii-prefsEditor-previewPerSettingFrame gpii-prefsEditor-previewPerSettingFrame-large gpiic-increaseSize-previewPerSettingFrameMagnifier" src="" frameborder="0"></iframe>
 		    </div>
 		
 		    <div class="gpii-increaseSize-plusMinusNumericalWidget">
