Working on the reusable followingElementAdjuster.

--- a/src/shared/adjusters/html/adjustersPilots2.html
+++ b/src/shared/adjusters/html/adjustersPilots2.html
@@ -2,6 +2,7 @@
     <div class="fl-container-flex60 fl-force-left gpii-prefsEditor-preferenceGroup">
 		<div class="gpiic-increaseSize-magnifierInvertColours"></div>
 		<div class="gpiic-increaseSize-showCrosshairs"></div>
+		<div class="gpiic-increaseSize-magnifierFollows"></div>
     </div>
     <div class="fl-container-flex35 fl-force-right">
         <div class="fl-prefsEditor-buttons">
