--- a/demos/adjustersPilots2/index.html
+++ b/demos/adjustersPilots2/index.html
@@ -33,6 +33,7 @@
     <script type="text/javascript" src="../../src/shared/adjusters/js/MagnifierInvertColoursAdjuster.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/ShowCrosshairsAdjuster.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/FollowingElementAdjuster.js"></script>
+    <script type="text/javascript" src="../../src/shared/adjusters/js/MagnifierFollowsFollowingElementAdjuster.js"></script>
 
     <!-- The JS files of the enactors of my custom adjusters -->
     <!-- <script type="text/javascript" src="../../src/shared/enactors/js/ContrastEnactor.js"></script> -->
