GPII-271: The Other Volume added.

--- a/src/pcp/newestSpeakText.html
+++ b/src/pcp/newestSpeakText.html
@@ -12,6 +12,11 @@
             <div class="words-spoken-per-minute"></div>
             <div class="volume"></div>
             <div class="braille"></div>
+
+            <div class="universalVolume"></div>
+
+
+
         </div>
     </div>
 </form>
