--- a/src/shared/adjusters/pcp/html/speakText.html
+++ b/src/shared/adjusters/pcp/html/speakText.html
@@ -1,8 +1,8 @@
-<div class="gpii-speakText-adjusters gpii-speakText-partially-expanded gpii-speakText-screenReaderTTSEnabled-element">
-    <h3><label for="screenReaderTTSEnabled" class="gpiic-speakText-screenReaderTTSEnabled-label gpii-speakText-switch"></label></h3>
+<div class="gpii-speakText-adjusters gpii-speakText-partially-expanded gpii-speakText-speakText-element">
+    <h3><label for="speakText" class="gpiic-speakText-speakText-label gpii-speakText-switch"></label></h3>
     <div id="gpii-speakText-screenReaderOnOff" class="fl-prefsEditor-onoff">
-        <input type="checkbox" id="screenReaderTTSEnabled" class="gpiic-speakText-screenReaderTTSEnabled"/>
-        <label for="screenReaderTTSEnabled">
+        <input type="checkbox" id="speakText" class="gpiic-speakText-speakText"/>
+        <label for="speakText">
             <span class="fl-prefsEditor-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF" tabindex="0">
                 <span class="fl-prefsEditor-switch-inner"></span>
             </span>
