Created the screenReaderFollows adjuster, but there are problems when having them in the same page (values are copied from one to other).

--- a/src/shared/adjusters/html/adjustersPilots2.html
+++ b/src/shared/adjusters/html/adjustersPilots2.html
@@ -3,6 +3,7 @@
 		<div class="gpiic-increaseSize-magnifierInvertColours"></div>
 		<div class="gpiic-increaseSize-showCrosshairs"></div>
 		<div class="gpiic-increaseSize-magnifierFollows"></div>
+		<div class="gpiic-increaseSize-screenReaderFollows"></div>
     </div>
     <div class="fl-container-flex35 fl-force-right">
         <div class="fl-prefsEditor-buttons">
