GPII-271: Volume's header added.

--- a/src/pcp/newestSpeakText.html
+++ b/src/pcp/newestSpeakText.html
@@ -13,10 +13,15 @@
             <div class="volume"></div>
             <div class="braille"></div>
 
+            <br>
+
+            <input type="checkbox" class=""/>
+            <label class="gpii-volumePresetButton-label preset-button-label"></label>
+            <label class="white-baloon-icon"></label>
+            <label class=""></label><br>
+            <div class="spacing-ensurer"></div><br>
+
             <div class="universalVolume"></div>
-
-
-
         </div>
     </div>
 </form>
