--- a/src/shared/adjusters/pcp/html/universalVolumeTemplate.html
+++ b/src/shared/adjusters/pcp/html/universalVolumeTemplate.html
@@ -1,6 +1,7 @@
 <div class="gpii-speakText-adjusters gpii-speakText-universalVolume-element">
     <div class="gpiic-speakText-universalVolume">
         <label class="gpiic-speakText-universalVolume-label gpii-speakText-label"></label><br>
+        <div class="gpiic-speakText-universalVolume-description gpii-speakText-description"></div>
         <label class="gpiic-speakText-textfieldStepper-decrement gpiic-speakText-universalVolume-minus" id="universalVolumeMinus"></label>
         <input type="text" class="gpii-textfieldStepper-field fl-inputs stepper"/>
         <label class="gpiic-speakText-textfieldStepper-increment gpiic-speakText-universalVolume-plus" id="universalVolumePlus"></label>
